--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -5913,8 +5913,11 @@ spec:
                                 - SETGID
                                 - SETUID
                             procMount: Unmasked
-                          description: SecurityContext applied to all workspace containers
-                            when run capabilities are enabled.
+                          description: |-
+                            SecurityContext applied to all workspace containers when run capabilities are enabled.
+                            The default `procMount: "Unmasked"` is set because the pod runs in a user namespace,
+                            which safely isolates the container's `/proc` from the host. This allows the container
+                            to modify its own sysctl settings for configuring networking for nested containers.
                           properties:
                             allowPrivilegeEscalation:
                               description: |-
@@ -6116,8 +6119,9 @@ spec:
                           default:
                             io.kubernetes.cri-o.Devices: /dev/fuse,/dev/net/tun
                           description: |-
-                            Extra annotations applied to all workspace pods,
-                            in addition to those defined in `devEnvironments.workspacePodAnnotations`.
+                            Extra annotations applied to all workspace pods, in addition to those defined
+                            in `devEnvironments.workspacePodAnnotations`. Enables `/dev/fuse` for access to the fuse driver
+                            and `/dev/net/tun` for safe network access.
                           type: object
                       required:
                         - openShiftSecurityContextConstraint
