chore: Add eclipse-che admin edit/view roles
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -21,3 +21,5 @@ resources:
 - role_binding.yaml
 - cluster_role.yaml
 - cluster_rolebinding.yaml
+- eclipse-che-edit-cluster_role.yaml
+- eclipse-che-view-cluster_role.yaml
