doc : add note clarifying defaultContainerResources behavior and add reference link
Added a note to the GoDoc for DefaultContainerResources explaining how actual
resource values are calculated — as the sum of CheCluster defaults and editor
overhead. Included a link to the official Che documentation for more details.

Signed-off-by: Rohan Kumar <rohaan@redhat.com>

--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -7318,6 +7318,12 @@ spec:
                     description: |-
                       DefaultContainerResources defines the resource requirements (memory/cpu limit/request) used for
                       container components that do not define limits or requests.
+                      Note: The actual pod container resource values exactly match the sum of:
+                      - The resource requirements configured via this field, plus
+                      - The used Editor overhead (varies from editor to editor).
+
+                      For more details, see:
+                      https://eclipse.dev/che/docs/stable/administration-guide/calculating-che-resource-requirements/
                     properties:
                       claims:
                         description: |-
