--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7318,6 +7318,12 @@ spec:
                     description: |-
                       DefaultContainerResources defines the resource requirements (memory/cpu limit/request) used for
                       container components that do not define limits or requests.
+                      Note: The actual pod container resource values exactly match the sum of:
+                      - The resource requirements configured via this field, plus
+                      - The used Editor overhead (varies from editor to editor).
+
+                      For more details, see:
+                      https://eclipse.dev/che/docs/stable/administration-guide/calculating-che-resource-requirements/
                     properties:
                       claims:
                         description: |-
