--- a/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -120,6 +120,11 @@ rules:
   verbs:
   - get
   - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - project.openshift.io
   resources:
@@ -127,6 +132,11 @@ rules:
   verbs:
   - get
   - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - ""
   resources:
@@ -185,6 +195,10 @@ rules:
   - get
   - list
   - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - ""
   resources:
@@ -193,6 +207,10 @@ rules:
   - get
   - list
   - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
@@ -204,6 +222,10 @@ rules:
   - get
   - list
   - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - route.openshift.io
   resources:
@@ -212,3 +234,7 @@ rules:
   - get
   - list
   - watch
+  - create
+  - update
+  - patch
+  - delete
