--- a/config/rbac/eclipse-che-edit-cluster_role.yaml
+++ b/config/rbac/eclipse-che-edit-cluster_role.yaml
@@ -121,6 +121,11 @@ rules:
   - verbs:
       - get
       - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
     apiGroups:
       - ''
     resources:
@@ -128,6 +133,11 @@ rules:
   - verbs:
       - get
       - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
     apiGroups:
       - project.openshift.io
     resources:
@@ -190,6 +200,10 @@ rules:
       - get
       - list
       - watch
+      - create
+      - update
+      - patch
+      - delete
   - apiGroups:
       - ''
     resources:
@@ -198,6 +212,10 @@ rules:
       - get
       - list
       - watch
+      - create
+      - update
+      - patch
+      - delete
   - apiGroups:
       - rbac.authorization.k8s.io
     resources:
@@ -209,6 +227,10 @@ rules:
       - get
       - list
       - watch
+      - create
+      - update
+      - patch
+      - delete
   - apiGroups:
       - route.openshift.io
     resources:
