--- a/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -148,6 +148,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - pods/exec
+  verbs:
+  - create
+  - get
+- apiGroups:
+  - ""
+  resources:
   - configmaps
   - persistentvolumeclaims
   - secrets
