--- a/config/rbac/eclipse-che-edit-cluster_role.yaml
+++ b/config/rbac/eclipse-che-edit-cluster_role.yaml
@@ -153,6 +153,13 @@ rules:
   - apiGroups:
       - ''
     resources:
+      - pods/exec
+    verbs:
+      - create
+      - get
+  - apiGroups:
+      - ''
+    resources:
       - configmaps
       - persistentvolumeclaims
       - secrets
