--- a/deploy/deployment/openshift/objects/eclipse-che-edit.ClusterRole.yaml
+++ b/deploy/deployment/openshift/objects/eclipse-che-edit.ClusterRole.yaml
@@ -147,6 +147,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - pods/exec
+  verbs:
+  - create
+  - get
+- apiGroups:
+  - ""
+  resources:
   - configmaps
   - persistentvolumeclaims
   - secrets
