chore: Add eclipse-che admin edit/view roles
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/next/eclipse-che/manifests/eclipse-che-edit_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -182,6 +182,17 @@ rules:
   - ""
   resources:
   - serviceaccounts
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - get
