--- a/config/rbac/eclipse-che-edit-cluster_role.yaml
+++ b/config/rbac/eclipse-che-edit-cluster_role.yaml
@@ -187,6 +187,17 @@ rules:
       - ''
     resources:
       - serviceaccounts
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - ''
+    resources:
       - services
     verbs:
       - get
