--- a/config/rbac/eclipse-che-edit-cluster_role.yaml
+++ b/config/rbac/eclipse-che-edit-cluster_role.yaml
@@ -187,7 +187,18 @@ rules:
       - ''
     resources:
       - serviceaccounts
-      - services
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - ''
+    resources:
+      - serviceaccounts
     verbs:
       - get
       - list
