--- a/deploy/deployment/kubernetes/objects/eclipse-che-edit.ClusterRole.yaml
+++ b/deploy/deployment/kubernetes/objects/eclipse-che-edit.ClusterRole.yaml
@@ -181,7 +181,18 @@ rules:
   - ""
   resources:
   - serviceaccounts
-  - services
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
   verbs:
   - get
   - list
