--- a/config/rbac/eclipse-che-edit-cluster_role.yaml
+++ b/config/rbac/eclipse-che-edit-cluster_role.yaml
@@ -198,7 +198,7 @@ rules:
   - apiGroups:
       - ''
     resources:
-      - serviceaccounts
+      - service
     verbs:
       - get
       - list
