--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -86,7 +86,7 @@ metadata:
     categories: Developer Tools
     certified: "false"
     containerImage: quay.io/eclipse/che-operator:next
-    createdAt: "2025-08-28T09:40:43Z"
+    createdAt: "2025-10-14T09:37:42Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
     features.operators.openshift.io/cnf: "false"
@@ -108,7 +108,7 @@ metadata:
     operatorframework.io/arch.amd64: supported
     operatorframework.io/arch.arm64: supported
     operatorframework.io/os.linux: supported
-  name: eclipse-che.v7.109.0-940.next
+  name: eclipse-che.v7.110.0-941.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -949,19 +949,19 @@ spec:
                       - name: OPERATOR_NAME
                         value: che-operator
                       - name: CHE_VERSION
-                        value: next
+                        value: 7.109.0
                       - name: RELATED_IMAGE_che_server
-                        value: quay.io/eclipse/che-server:next
+                        value: quay.io/eclipse/che-server:7.109.0
                       - name: RELATED_IMAGE_dashboard
-                        value: quay.io/eclipse/che-dashboard:next
+                        value: quay.io/eclipse/che-dashboard:7.109.0
                       - name: RELATED_IMAGE_plugin_registry
-                        value: quay.io/eclipse/che-plugin-registry:next
+                        value: quay.io/eclipse/che-plugin-registry:7.109.0
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
                         value: quay.io/eclipse/che-tls-secret-creator:9f9d4a6
                       - name: RELATED_IMAGE_single_host_gateway
                         value: quay.io/eclipse/che--traefik:v3.4.0-4cf907247939b5d20bf4eff73abd21cb413c339600dde76dbc94a874b2578a27
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: quay.io/che-incubator/configbump:next
+                        value: quay.io/che-incubator/configbump:7.109.0
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
                         value: quay.io/openshift/origin-oauth-proxy:4.9
                       - name: RELATED_IMAGE_gateway_authorization_sidecar
@@ -1003,7 +1003,7 @@ spec:
                         value: argocd[.]argoproj[.]io/.+
                       - name: CHE_OPERATOR_WORKSPACES_CONFIG_CONTROLLER_ANNOTATIONS_TO_REMOVE_BEFORE_SYNC_REGEXP
                     image: quay.io/eclipse/che-operator:next
-                    imagePullPolicy: Always
+                    imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
                       httpGet:
@@ -1119,17 +1119,17 @@ spec:
   provider:
     name: Eclipse Foundation
   relatedImages:
-    - image: quay.io/eclipse/che-server:next
+    - image: quay.io/eclipse/che-server:7.109.0
       name: che-server
-    - image: quay.io/eclipse/che-dashboard:next
+    - image: quay.io/eclipse/che-dashboard:7.109.0
       name: dashboard
-    - image: quay.io/eclipse/che-plugin-registry:next
+    - image: quay.io/eclipse/che-plugin-registry:7.109.0
       name: plugin-registry
     - image: quay.io/eclipse/che-tls-secret-creator:9f9d4a6
       name: che-tls-secrets-creation-job
     - image: quay.io/eclipse/che--traefik:v3.4.0-4cf907247939b5d20bf4eff73abd21cb413c339600dde76dbc94a874b2578a27
       name: single-host-gateway
-    - image: quay.io/che-incubator/configbump:next
+    - image: quay.io/che-incubator/configbump:7.109.0
       name: single-host-gateway-config-sidecar
     - image: quay.io/openshift/origin-oauth-proxy:4.9
       name: gateway-authentication-sidecar
@@ -1141,7 +1141,7 @@ spec:
       name: gateway-authorization-sidecar-k8s
     - image: quay.io/che-incubator/header-rewrite-proxy:latest
       name: gateway-header-sidecar
-  version: 7.109.0-940.next
+  version: 7.110.0-941.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
