ci: Add new 7.111.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -125,3 +125,5 @@ entries:
     replaces: eclipse-che.v7.108.0
   - name: eclipse-che.v7.110.0
     replaces: eclipse-che.v7.109.0
+  - name: eclipse-che.v7.111.0
+    replaces: eclipse-che.v7.110.0
