Adjust SSHD editor definition command.
- The che-code-sshd landing page enhancements result in multiple
  resource files being placed in /opt/www/ . It is necessary to set the
  working directory prior to calling node

Signed-off-by: Roland Grunberg <rgrunber@redhat.com>

--- a/editors-definitions/che-code-sshd-insiders.yaml
+++ b/editors-definitions/che-code-sshd-insiders.yaml
@@ -87,7 +87,7 @@ components:
       command:
         - sh
         - -c
-        - "nohup /entrypoint.sh & nohup /sshd.start & nohup node /opt/www/server.js & tail -f /dev/null"
+        - "nohup /entrypoint.sh & nohup /sshd.start & pushd /opt/www/ && nohup node /opt/www/server.js & tail -f /dev/null"
       endpoints:
         - name: che-code-sshd
           attributes:
