--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -127,3 +127,5 @@ entries:
     replaces: eclipse-che.v7.109.0
   - name: eclipse-che.v7.111.0
     replaces: eclipse-che.v7.110.0
+  - name: eclipse-che.v7.112.0
+    replaces: eclipse-che.v7.111.0
