--- a/editors-definitions/che-code-sshd-next.yaml
+++ b/editors-definitions/che-code-sshd-next.yaml
@@ -76,18 +76,26 @@ metadata:
       </defs>
       </svg>
 
+commands:
+  - id: start-sshd
+    exec:
+      component: che-code-sshd
+      commandLine: ( /sshd/sshd.start & )
+events:
+  postStart:
+    - start-sshd
 components:
-  - name: che-code-sshd
+  - name: che-code-sshd-page
     container:
       image: quay.io/che-incubator/che-code-sshd:next
-      memoryLimit: 4096Mi
-      memoryRequest: 256Mi
-      cpuLimit: 1000m
-      cpuRequest: 500m
+      memoryLimit: 256Mi
+      memoryRequest: 32Mi
+      cpuLimit: 500m
+      cpuRequest: 30m
       command:
         - sh
         - -c
-        - "nohup /entrypoint.sh & nohup /sshd.start & pushd /opt/www/ && nohup node /opt/www/server.js & tail -f /dev/null"
+        - "cp /usr/sbin/sshd /usr/bin/ssh-keygen /usr/bin/tar /usr/bin/gzip /usr/lib64/libnss_wrapper.so /usr/lib64/libpam.so.0 /usr/lib64/libeconf.so.0 /usr/lib64/libcrypt.so.2 /etc/ssh/sshd_config /sshd.start /sshd/ & while [ ! -e /sshd/username ]; do sleep 1s; done; pushd /opt/www/ && exec node /opt/www/server.js"
       endpoints:
         - name: che-code-sshd
           attributes:
@@ -99,10 +107,25 @@ components:
           secure: true
           protocol: https
       volumeMounts:
-        - name: m2
-          path: /home/user/.m2
+        - name: sshd-folder
+          path: /sshd
+    attributes:
+      app.kubernetes.io/component: che-code-sshd-page
+      app.kubernetes.io/part-of: che-code-server.eclipse.org
+  - name: che-code-sshd
+    container:
+      image: quay.io/che-incubator/che-code-sshd:next
+      memoryLimit: 4096Mi
+      memoryRequest: 256Mi
+      cpuLimit: 1000m
+      cpuRequest: 500m
+      volumeMounts:
+        - name: sshd-folder
+          path: /sshd
     attributes:
       app.kubernetes.io/component: che-code-sshd
       app.kubernetes.io/part-of: che-code-server.eclipse.org
-  - name: m2
+      controller.devfile.io/container-contribution: true
+  - name: sshd-folder
     volume: {}
+
