ci: Add new 7.113.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -129,3 +129,5 @@ entries:
     replaces: eclipse-che.v7.110.0
   - name: eclipse-che.v7.112.0
     replaces: eclipse-che.v7.111.0
+  - name: eclipse-che.v7.113.0
+    replaces: eclipse-che.v7.112.0
