--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -86,7 +86,7 @@ metadata:
     categories: Developer Tools
     certified: "false"
     containerImage: quay.io/eclipse/che-operator:next
-    createdAt: "2025-12-19T10:48:02Z"
+    createdAt: "2026-01-16T09:05:16Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
     features.operators.openshift.io/cnf: "false"
@@ -108,7 +108,7 @@ metadata:
     operatorframework.io/arch.amd64: supported
     operatorframework.io/arch.arm64: supported
     operatorframework.io/os.linux: supported
-  name: eclipse-che.v7.113.0-949.next
+  name: eclipse-che.v7.114.0-950.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -959,7 +959,7 @@ spec:
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
                         value: quay.io/eclipse/che-tls-secret-creator:9f9d4a6
                       - name: RELATED_IMAGE_single_host_gateway
-                        value: quay.io/eclipse/che--traefik:v3.4.0-4cf907247939b5d20bf4eff73abd21cb413c339600dde76dbc94a874b2578a27
+                        value: quay.io/eclipse/traefik:v3.6.7-2c5e029ee3638d3788b4ca7c8ef454baa8f924b91b190b3fd2742bee721ebeea
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
                         value: quay.io/che-incubator/configbump:next
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
@@ -1127,7 +1127,7 @@ spec:
       name: plugin-registry
     - image: quay.io/eclipse/che-tls-secret-creator:9f9d4a6
       name: che-tls-secrets-creation-job
-    - image: quay.io/eclipse/che--traefik:v3.4.0-4cf907247939b5d20bf4eff73abd21cb413c339600dde76dbc94a874b2578a27
+    - image: quay.io/eclipse/traefik:v3.6.7-2c5e029ee3638d3788b4ca7c8ef454baa8f924b91b190b3fd2742bee721ebeea
       name: single-host-gateway
     - image: quay.io/che-incubator/configbump:next
       name: single-host-gateway-config-sidecar
@@ -1141,7 +1141,7 @@ spec:
       name: gateway-authorization-sidecar-k8s
     - image: quay.io/che-incubator/header-rewrite-proxy:latest
       name: gateway-header-sidecar
-  version: 7.113.0-949.next
+  version: 7.114.0-950.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
