chore: Remove olm dependency
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -86,7 +86,7 @@ metadata:
     categories: Developer Tools
     certified: "false"
     containerImage: quay.io/eclipse/che-operator:next
-    createdAt: "2026-01-16T09:21:06Z"
+    createdAt: "2026-01-21T12:02:21Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
     features.operators.openshift.io/cnf: "false"
@@ -108,7 +108,7 @@ metadata:
     operatorframework.io/arch.amd64: supported
     operatorframework.io/arch.arm64: supported
     operatorframework.io/os.linux: supported
-  name: eclipse-che.v7.114.0-951.next
+  name: eclipse-che.v7.114.0-952.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -906,6 +906,14 @@ spec:
               verbs:
                 - get
                 - create
+            - apiGroups:
+                - operators.coreos.com
+              resources:
+                - subscriptions
+              verbs:
+                - get
+                - watch
+                - list
           serviceAccountName: che-operator
       deployments:
         - label:
@@ -1141,7 +1149,7 @@ spec:
       name: gateway-authorization-sidecar-k8s
     - image: quay.io/che-incubator/header-rewrite-proxy:latest
       name: gateway-header-sidecar
-  version: 7.114.0-951.next
+  version: 7.114.0-952.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
