--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -131,3 +131,5 @@ entries:
     replaces: eclipse-che.v7.111.0
   - name: eclipse-che.v7.113.0
     replaces: eclipse-che.v7.112.0
+  - name: eclipse-che.v7.114.0
+    replaces: eclipse-che.v7.113.0
