Add support for UBI 8 in che-code-sshd editor definition.
- The che-code-sshd image is now a multi-stage image that supports UBI
  8,9 and 10 with appropriate library defined at /sshd-staging/ubi8/ &
  /sshd-staging/ubi9/
- The che-code-sshd-page container is now only responsible for copying
  those resources into the /sshd/ volume mount and setting up the
  landing page with connection instructions, using sshd.init script
- Remove 'Tech-Preview' tag

Signed-off-by: Roland Grunberg <rgrunber@redhat.com>

--- a/editors-definitions/che-code-sshd-next.yaml
+++ b/editors-definitions/che-code-sshd-next.yaml
@@ -19,7 +19,6 @@ metadata:
     - ssh
     - CLI
     - vscode
-    - Tech-Preview
   attributes:
     arch:
       - x86_64
@@ -84,7 +83,9 @@ commands:
 events:
   postStart:
     - start-sshd
+
 components:
+
   - name: che-code-sshd-page
     container:
       image: quay.io/che-incubator/che-code-sshd:next
@@ -95,7 +96,7 @@ components:
       command:
         - sh
         - -c
-        - "cp /usr/sbin/sshd /usr/bin/ssh-keygen /usr/bin/tar /usr/bin/gzip /usr/bin/which /usr/lib64/libnss_wrapper.so /usr/lib64/libpam.so.0 /usr/lib64/libeconf.so.0 /usr/lib64/libcrypt.so.2 /etc/ssh/sshd_config /sshd.start /sshd/ & while [ ! -e /sshd/username ]; do sleep 1s; done; pushd /opt/www/ && exec node /opt/www/server.js"
+        - "/sshd-staging/sshd.init"
       endpoints:
         - name: che-code-sshd
           attributes:
@@ -112,9 +113,10 @@ components:
     attributes:
       app.kubernetes.io/component: che-code-sshd-page
       app.kubernetes.io/part-of: che-code-server.eclipse.org
+
   - name: che-code-sshd
     container:
-      image: quay.io/che-incubator/che-code-sshd:next
+      image: registry.access.redhat.com/ubi9-minimal:9.7
       memoryLimit: 4096Mi
       memoryRequest: 256Mi
       cpuLimit: 1000m
@@ -126,6 +128,7 @@ components:
       app.kubernetes.io/component: che-code-sshd
       app.kubernetes.io/part-of: che-code-server.eclipse.org
       controller.devfile.io/container-contribution: true
+
   - name: sshd-folder
     volume: {}
 
