--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -23,7 +23,7 @@ on:
       - main
 jobs:
   build-operator-image-multiarch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     outputs:
       git-sha: ${{ steps.git-sha.outputs.sha }}
@@ -37,10 +37,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Set output for Git short SHA
         id: git-sha
-        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        run: echo "sha=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
 
       - name: Login to quay.io
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
@@ -70,7 +70,7 @@ jobs:
       - name: Install yq
         run: sudo pip install yq
       - name: Login to quay.io
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
@@ -96,7 +96,7 @@ jobs:
       - name: Install yq
         run: sudo pip install yq
       - name: Login to quay.io
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
