Add CAP_CHOWN when hostUsers: false and procMount: Unmasked
Signed-off-by: cgruver <cgruver@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -5976,6 +5976,7 @@ spec:
                               add:
                                 - SETGID
                                 - SETUID
+                                - CHOWN
                             procMount: Unmasked
                           description: |-
                             SecurityContext applied to all workspace containers when run capabilities are enabled.
