--- a/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -5976,6 +5976,7 @@ spec:
                               add:
                                 - SETGID
                                 - SETUID
+                                - CHOWN
                             procMount: Unmasked
                           description: |-
                             SecurityContext applied to all workspace containers when run capabilities are enabled.
