--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -5955,6 +5955,7 @@ spec:
                             add:
                             - SETGID
                             - SETUID
+                            - CHOWN
                           procMount: Unmasked
                         description: |-
                           SecurityContext applied to all workspace containers when run capabilities are enabled.
