--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5950,6 +5950,7 @@ spec:
                             add:
                             - SETGID
                             - SETUID
+                            - CHOWN
                           procMount: Unmasked
                         description: |-
                           SecurityContext applied to all workspace containers when run capabilities are enabled.
